methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:18: error: '(' expected but identifier found.
  for k<-1 to 4 {
      ^PictureMono2:23: error: illegal start of simple expression
} 
^PictureMono2:25: error: Unmatched closing brace '}' ignored here
}
^